objects/nFORCE__Business_Process_Interaction__c.object
<CustomObject>
    <description>This object maintains the state for interactions over the course of a transaction.</description>
    <fields>
        <fullName>nFORCE__Action__c</fullName>
        <description>The system automatically populates this required text field with the action for this transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the action for this transaction.</inlineHelpText>
        <label>Action</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Context_Id__c</fullName>
        <description>The system automatically populates this required text field with the identifier of the object related to this transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the identifier of the object related to this transaction.</inlineHelpText>
        <label>Context Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Correlation_Id__c</fullName>
        <description>The system automatically populates this required string field with an ID that refers to all business activities in the scope of this transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays an ID that refers to all business activities in the scope of this transaction.</inlineHelpText>
        <label>Correlation Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Duration__c</fullName>
        <description>The system automatically populates this field with the end-to-end processing time of the Business Process Interaction.</description>
        <formula>nFORCE__FinalTimestamp__c - nFORCE__Timestamp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the end-to-end processing time of the Business Process Interaction.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__External_Id__c</fullName>
        <description>The system automatically populates this required string field with an ID that refers to this Business Process Interaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Displays an ID that refers to this Business Process Interaction.</inlineHelpText>
        <label>External Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__FinalTimestamp__c</fullName>
        <description>The system automatically populates this required field to capture the timestamp of completion of the business activity interaction.</description>
        <inlineHelpText>Displays the timestamp of completion of the business activity interaction.</inlineHelpText>
        <label>Final Timestamp</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Message__c</fullName>
        <description>The system automatically populates this optional text field with the most recent,  relevant integration message, such as errors or the last recorded success state. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the most recent integration message, such as errors or the last recorded success state.</inlineHelpText>
        <label>Message</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Parent_Business_Process_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field with the parent record to which this transaction is associated.</description>
        <inlineHelpText>Displays the parent record to which this transaction is associated.</inlineHelpText>
        <label>Parent Business Process Interaction</label>
        <referenceTo>nFORCE__Business_Process_Interaction__c</referenceTo>
        <relationshipLabel>Parent Business Process Interactions</relationshipLabel>
        <relationshipName>Business_Process_Interaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Status__c</fullName>
        <description>The system automatically populates this text field with the normalized status to which this transaction was set. By default, it is Queued.</description>
        <inlineHelpText>Displays the status to which this transaction was set when created.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Completed With Errors</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Timestamp__c</fullName>
        <description>The system automatically populates this required field with the timestamp the business activity interaction was created.</description>
        <inlineHelpText>Displays the timestamp the business activity interaction was created.</inlineHelpText>
        <label>Timestamp</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Process Interaction</label>
    <nameField>
        <displayFormat>BPI-{00000}</displayFormat>
        <label>Business Process Interaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Process Interactions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>